# Masking-Effects-on-XAI-Techniques

./: .gitignore  .pre-commit-config.yaml  README.md  change_branch.sh  kaggle.json  plots.py  project.py  pyproject.toml  sales_data.csv  sales_data.csv:Zone.Identifier
adult/: adult.names:Zone.Identifier
data/anonymized_data/a-k-anonymity/: anon_data_k_10_a_0.8.csv  anon_data_k_10_a_0.9.csv  anon_data_k_10_a_1.0.csv  output.txt
data/anonymized_data/l-diversity/: output.txt
data/anonymized_data/t-closeness/: anon_data_t_0.1.csv  anon_data_t_0.2.csv  anon_data_t_0.5.csv  anon_data_t_0.6.csv  anon_data_t_0.7.csv  output.txt
hierarchies/: age.csv  capital-gain.csv  capital-loss.csv  education.csv  hours-per-week.csv  income.csv  native-country.csv  relationship.csv
notebooks/: Annonymization.ipynb  Finding K.ipynb  LIME-comparisson.ipynb  LIME.py  LIME_discover.ipynb  SHAP.ipynb  debug.py  ds.py  model-on-pure-data.py  pipeline.py  practice_decision_trees.py  preprocessing.py  shap_example.ipynb
src/: main.py
src/hpc/: LSF_options.sh  LSF_run.sh  LSP_run.sh  README.md  anonymize.py  common_vars.sh  copy_files_to_hpc.sh  main.py  requirements.txt  setup.sh  submit.sh
src/hpc/scripts/: importance_vector.py  shap.py
src/masking_effects_on_xai_techniques/: __init__.py  anonymized_preprocessor.py  hierarchies.py  lime_tools.py  preprocessor.py  utils.py
typings/sklearn/: __init__.pyi  _typing.pyi  base.pyi  calibration.pyi  conftest.pyi  discriminant_analysis.pyi  dummy.pyi  isotonic.pyi  kernel_approximation.pyi  kernel_ridge.pyi  multiclass.pyi  multioutput.pyi  naive_bayes.pyi  pipeline.pyi  random_projection.pyi
typings/sklearn/_loss/: _loss.pyi  glm_distribution.pyi  link.pyi  loss.pyi
typings/sklearn/cluster/: __init__.pyi  _agglomerative.pyi  _birch.pyi  _bisect_k_means.pyi  _dbscan.pyi  _dbscan_inner.pyi  _kmeans.pyi
typings/sklearn/compose/: _column_transformer.pyi
typings/sklearn/covariance/: _empirical_covariance.pyi  _graph_lasso.pyi  _robust_covariance.pyi  _shrunk_covariance.pyi
typings/sklearn/cross_decomposition/: __init__.pyi  _pls.pyi
typings/sklearn/datasets/: __init__.pyi  _base.pyi  _california_housing.pyi  _samples_generator.pyi  _species_distributions.pyi
typings/sklearn/decomposition/: __init__.pyi  _base.pyi  _dict_learning.pyi  _incremental_pca.pyi  _kernel_pca.pyi  _lda.pyi  _nmf.pyi
typings/sklearn/ensemble/: __init__.pyi  _base.pyi  _forest.pyi  _gb.pyi  _gb_losses.pyi  _gradient_boosting.pyi  _stacking.pyi  _voting.pyi  _weight_boosting.pyi
typings/sklearn/experimental/: enable_hist_gradient_boosting.pyi
typings/sklearn/feature_extraction/: _dict_vectorizer.pyi  image.pyi  text.pyi
typings/sklearn/feature_selection/: __init__.pyi  _base.pyi  _univariate_selection.pyi
typings/sklearn/gaussian_process/: kernels.pyi
typings/sklearn/impute/: _base.pyi  _iterative.pyi  _knn.pyi
typings/sklearn/inspection/: __init__.pyi  _partial_dependence.pyi
typings/sklearn/linear_model/: __init__.pyi  _base.pyi  _linear_loss.pyi  _logistic.pyi  _ransac.pyi  _ridge.pyi  _stochastic_gradient.pyi
typings/sklearn/manifold/: __init__.pyi  _isomap.pyi  _locally_linear.pyi  _mds.pyi  _spectral_embedding.pyi
typings/sklearn/metrics/: __init__.pyi  _classification.pyi  _dist_metrics.pyi  _ranking.pyi  _regression.pyi  pairwise.pyi
typings/sklearn/mixture/: _bayesian_mixture.pyi  _gaussian_mixture.pyi
typings/sklearn/model_selection/: _plot.pyi  _search.pyi  _search_successive_halving.pyi  _split.pyi  _validation.pyi
(+62 files in other folders)
