[project]
name = "masking-effects-on-xai-techniques"
version = "0.1.0"
description = "A bachelor thesis investigating the masking effects on XAI techniques"
readme = "README.md"
authors = [
    { name = "Casper Lauge Nørup Koch", email = "kochcasper@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.46.0",
    "ipython>=8.37.0",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.4.10",
    "jupyterlab-lsp>=5.2.0",
    "jupyterlab-vim>=4.1.4",
    "kagglehub[pandas-datasets]>=0.3.13",
    "lime>=0.2.0.1",
    "marimo>=0.17.3",
    "matplotlib>=3.10.6",
    "numpy>=2.2.6",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "shap>=0.49.1",
    "ucimlrepo>=0.0.7",
]

[build-system]
requires = ["uv_build>=0.9.3,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "basedpyright>=1.32.1",
    "pandas-stubs>=2.3.2.250926",
    "python-lsp-server>=1.13.1",
    "ruff>=0.14.3",
]

[tool.pyright]
reportUnannotatedClassAttribute = "none"
reportImplicitOverride = "none"
reportUnknownParameterType = "none"
reportMissingParameterType = "none"
reportUnknownVariableType = "none"
reportUnknownMemberType = "none"
reportUnknownArgumentType = "none"
reportAny = "none"
stubPath = "typings"
