[project]
name = "masking-effects-on-xai-techniques"
version = "0.1.0"
description = "A bachelor thesis investigating the masking effects on XAI techniques"
readme = "README.md"
authors = [
    { name = "Casper Lauge Nørup Koch", email = "kochcasper@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "anjana>=1.1.0",
    "ipython>=8.37.0",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.4.10",
    "jupyterlab-lsp>=5.2.0",
    "jupyterlab-vim>=4.1.4",
    "loguru>=0.7.3",
    "matplotlib>=3.10.6",
    "scikit-learn>=1.7.2",
]

[build-system]
requires = ["uv_build>=0.9.3,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "basedpyright>=1.32.1",
    "pandas-stubs>=2.3.2.250926",
    "python-lsp-server>=1.13.1",
    "ruff>=0.14.3",
]

[tool.pyright]
reportUnannotatedClassAttribute = "none"
reportImplicitOverride = "none"
reportUnknownParameterType = "none"
reportMissingParameterType = "none"
reportUnknownVariableType = "none"
reportUnknownMemberType = "none"
reportUnknownArgumentType = "none"
reportAny = "none"
stubPath = "typings"
